structural-typing/tests/ui/enum_rejected.stderr
error: #[structural] can only be applied to structs
 --> tests/ui/enum_rejected.rs:4:1
  |
4 | / enum MyEnum {
5 | |     Variant,
6 | | }
  | |_^
