structural-typing/tests/ui/enum_rejected.rs
use structural_typing::structural;

#[structural]
enum MyEnum {
    Variant,
}

fn main() {}
